--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,34 +1,36 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
 <div class="container">
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" routerLink='/'>Dating App</a>
       
-        <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUsers$ |async">
+        <ul class="navbar-nav mr-auto" >
+        <ng-container *ngIf="accountService.currentUsers$ |async" >
           <li class="nav-item">
-            <a class="nav-link" href="#">Matches</a>
+            <a class="nav-link" routerLink='/members' routerLinkActive='active'>Matches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Links</a>
+            <a class="nav-link" routerLink='/lists' routerLinkActive='active'>Links</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
+            <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
+          </li>
+        </ng-container>
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/error' routerLinkActive='active'>Errors</a>
           </li>
         </ul>
-        <div class="dropdown" *ngIf="accountService.currentUsers$ |async" dropdown>
-          <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+        <div class="dropdown" *ngIf="(accountService.currentUsers$ | async) as User" dropdown>
+          <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{User.userName | uppercase }} </a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
-            <a class="dropdown-item">Edit Profile</a>
+            <a class="dropdown-item"> Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item"(click)="logout()">Logout</a>
           </div>
-
         </div>
 
-
-
-        <form *ngIf="(accountService.currentUsers$ |async) == null" #LoginForm="ngForm" class="form-inline mt-md-0" (ngSubmit)="login()" autocomplete="off">
+        <form *ngIf="(accountService.currentUsers$ | async) == null" #LoginForm="ngForm" class="form-inline mt-md-0" (ngSubmit)="login()" autocomplete="off">
           <input 
             name="username"
-            [(ngModel)]="model.username"
+            [(ngModel)]="model.userName"
             class="form-control mr-sm-2" 
             type="text" 
             placeholder="UserName">
@@ -38,7 +40,7 @@
             class="form-control mr-sm-2" 
             type="password" 
             placeholder="Password">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+          <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
         </form>
       </div>
 
