End of Section 8

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -30,7 +30,7 @@
         <form *ngIf="(accountService.currentUsers$ | async) == null" #LoginForm="ngForm" class="form-inline mt-md-0" (ngSubmit)="login()" autocomplete="off">
           <input 
             name="username"
-            [(ngModel)]="model.userName"
+            [(ngModel)]="model.username"
             class="form-control mr-sm-2" 
             type="text" 
             placeholder="UserName">
