--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
         <ul class="navbar-nav mr-auto" >
         <ng-container *ngIf="accountService.currentUsers$ |async" >
           <li class="nav-item">
-            <a class="nav-link" routerLink='/members' routerLinkActive='active'>Matches</a>
+            <a class="nav-link" routerLink='/members' routerLinkActive='active'>Members</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink='/lists' routerLinkActive='active'>Links</a>
