--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,7 +21,7 @@
         <div class="dropdown" *ngIf="(accountService.currentUsers$ | async) as User" dropdown>
           <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{User.userName | uppercase }} </a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
-            <a class="dropdown-item" routerLink='/members/edit' > Edit Profile</a>
+            <a routerLink='/members/edit' class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item"(click)="logout()">Logout</a>
           </div>
