--- a/client/src/app/member/member-edit/member-edit.component.html
+++ b/client/src/app/member/member-edit/member-edit.component.html
@@ -56,8 +56,7 @@
                
             </tab>
             <tab heading='Edit Photos'>
-                <h1>Intrests</h1>
-                <p>Photo Edit will go here</p>
+            <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
