--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -19,7 +19,8 @@
           </li>
         </ul>
         <div class="dropdown" *ngIf="(accountService.currentUsers$ | async) as User" dropdown>
-          <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{User.userName | uppercase }} </a>
+          <img src="{{User.photoUrl}}" alt="{{User.userName}}">
+          <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{User.userName | uppercase }} </a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a routerLink='/members/edit' class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
