--- a/client/src/app/member/member-card/member-card.component.html
+++ b/client/src/app/member/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
     <div class="card-img-wrapper">
-        <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.isKnownAs}}" class="card-img-top"> 
+        <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.KnownAs}}" class="card-img-top"> 
       <ul class="list-inline member-icons animate text-center">
         <li class="list-inline-item"><button routerLink='/members/{{member.username}}' class="btn btn-primary">
               <i class="fa fa-user"></i></button></li>
@@ -12,7 +12,7 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-cente mb-1"><i class="fa fa-user mr-2"></i>
-        {{member.isKnownAs}}
+        {{member.username}}
         </h6>
         <p class="card-text text-muted text-center">{{member.city}} </p>
     </div>
