--- a/client/src/app/member/member-detail/member-detail.component.html
+++ b/client/src/app/member/member-detail/member-detail.component.html
@@ -2,7 +2,7 @@
 <div class="row" *ngIf="member">
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.isKnownAs}}" 
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.KnownAs}}" 
             class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
