--- a/client/src/app/_Forms/date-input/date-input.component.html
+++ b/client/src/app/_Forms/date-input/date-input.component.html
@@ -8,5 +8,6 @@
     bsDatepicker
     [bsConfig]='bsConfig'
     [maxDate]='maxDate'>
-<div *ngif="ngControl.control.errors?.required" class="invalid-feedback">{{label}} is required</div>
+<div *ngIf="ngControl.control.errors?.required" class="invalid-feedback">{{label}} is required</div>
 </div>
+
