--- a/client/src/app/member/member-detail/member-detail.component.html
+++ b/client/src/app/member/member-detail/member-detail.component.html
@@ -47,7 +47,7 @@
                 style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading='Message'>
-                <p>Message will go here</p>
+                <app-member-messages [username]="member.username"></app-member-messages>
             </tab>
         </tabset>
     </div>
