--- a/client/src/app/member/member-detail/member-detail.component.html
+++ b/client/src/app/member/member-detail/member-detail.component.html
@@ -1,8 +1,7 @@
-<h1 *ngIf="member">{{member.isKnownAs}}</h1>
-<div class="row" *ngIf="member">
+<div class="row" >
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.KnownAs}}" 
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.isKnownAs}}" 
             class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
@@ -25,29 +24,30 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="btn btn-primary">Like</button>  
-                    <button class="btn btn-success">Message</button>                 
+                    <button (click)="selectTab(3)" class="btn btn-success">Message</button>                 
                 </div>
             </div>
         </div>
     </div>
     <div class="col-8">
-        <tabset class="member-tabset">
-            <tab heading='About {{member.isKnownAs}}'>
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading='About {{member.isKnownAs}}' (selectTab)="onTabActivated($event)">
+                
                 <h1>Description</h1>
                 <p>{{member.interduction}}</p>
                 <h4>Looking for</h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
-            <tab heading='Intrests'>
+            <tab heading='Intrests' (selectTab)="onTabActivated($event)">
                 <h1>Intrests</h1>
                 <p>{{member.intests}}</p>
             </tab>
-            <tab heading='Photos'>
+            <tab heading='Photos' (selectTab)="onTabActivated($event)">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
                 style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
-            <tab heading='Message'>
-                <app-member-messages [username]="member.username"></app-member-messages>
+            <tab heading='Message' (selectTab)="onTabActivated($event)">
+                <app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
             </tab>
         </tabset>
     </div>
