--- a/client/src/app/member/member-messages/member-messages.component.html
+++ b/client/src/app/member/member-messages/member-messages.component.html
@@ -1,11 +1,10 @@
-<p *ngFor="let message of messages">{{message?.content}}</p>
 <div class="card">
     <div class="card-body">
         <div *ngIf="messages?.length===0">
             No messages yet... say hi by using the message box below
         </div>
-        <ul *ngIf="messages?.length>0">
-            <li *ngFor="let message of messages">
+        <ul *ngIf="messages?.length>0" class="chat">
+            <li *ngFor="let message of messages" >
                 <div>
                     <span class="chat-img float-right">
                         <img class="rounded-circle" src="{{message.senderPhotoUrl || './assets/user.png'}}"
@@ -31,11 +30,17 @@
         </ul>
     </div>
     <div class="card-footer">
-        <form>
+        <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
             <div class="input-group">
-                <input type="text" class="form-control input-sm" placeholder="Send Private Message">
+                <input 
+                        name="messageContent"
+                        required
+                        [(ngModel)]="messageContenet"
+                        type="text" 
+                        class="form-control input-sm" 
+                        placeholder="Send Private Message">
                 <div class="input-group-append">
-                    <button class="btn btn-primary" type="submit">send</button>
+                    <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">send</button>
                 </div>
             </div>
         </form>
