--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -25,9 +25,9 @@
         <th style="width: 20%">Sent / Recive</th>
         <th style="width: 20%"></th>
     </tr>
-        <tr *ngFor="let message of messages" routerLink='{{continer === "Outbox" 
+        <tr [hidden]="loading" *ngFor="let message of messages" routerLink='{{continer === "Outbox" 
                     ? "/members/" + message.recipientUsername
-                    : "/members/" + message.senderUsername}}'>
+                    : "/members/" + message.senderUsername}}'[queryParams]='{tab: 3}'>
                 <td>{{message.content}}</td>
                 <td>
                     <div *ngIf="continer==='Outbox'">
@@ -47,12 +47,13 @@
                 </td>
                 <td>{{message.messageSent | timeago}}</td>
                 <td>
-                    <button class=" btn btn-danger">Delete</button>
+                    <button (click)="$event.stopPropagation()"  (click)="deleteMessage(message.id)" class=" btn btn-danger">Delete</button>
                 </td>
         </tr>
     </table>
 </div>
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div *ngIf="(continer=='Outbox' || continer=='Inbox' || continer=='Unread') && messages?.length>0">
+<div class="d-flex justify-content-center"  *ngIf="pagination && !loading ">
     <pagination [boundaryLinks]="true" 
                 [totalItems]="pagination.totalItems"
                 [itemsPerPage]="pagination.itemsPerPage"
@@ -64,4 +65,5 @@
                 lastText="&raquo;">
      
     </pagination>
+</div>
 </div>
