--- a/client/src/app/admin/user-management/user-management.component.html
+++ b/client/src/app/admin/user-management/user-management.component.html
@@ -8,7 +8,7 @@
         <tr *ngFor="let user of users">
             <td>{{user.username}}</td>
             <td>{{user.roles}}</td>
-            <td><button (click)="openRoleModals(user)" class="btn btn-info">Edit Role</button></td>
+            <td><button (click)="openRolesModal(user)" class="btn btn-info">Edit Role</button></td>
         </tr>
     </table>
 </div>
