--- a/client/src/app/member/member-detail/member-detail.component.html
+++ b/client/src/app/member/member-detail/member-detail.component.html
@@ -4,6 +4,10 @@
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.isKnownAs}}" 
             class="card-img-top img-thumbnail">
             <div class="card-body">
+                <div class="md-2" *ngIf="(presence.onlineUsers$ |async).includes(member.username)">
+                    <i class="fa fa-user-circle text-success"></i>online Now
+                </div>
+
                 <div>
                     <strong>Location:</strong>
                     <p>{{member.city}}, {{member.country}}</p>
@@ -47,7 +51,7 @@
                 style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading='Message' (selectTab)="onTabActivated($event)">
-                <app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
+                <app-member-messages [username]="member.username"></app-member-messages>
             </tab>
         </tabset>
     </div>
