--- a/client/src/app/member/member-messages/member-messages.component.html
+++ b/client/src/app/member/member-messages/member-messages.component.html
@@ -1,10 +1,10 @@
 <div class="card">
     <div class="card-body">
-        <div *ngIf="messages?.length===0">
+        <div *ngIf="(messageService.messageThread$|async)?.length===0">
             No messages yet... say hi by using the message box below
         </div>
-        <ul *ngIf="messages?.length>0" class="chat">
-            <li *ngFor="let message of messages" >
+        <ul *ngIf="(messageService.messageThread$|async)?.length>0" class="chat">
+            <li *ngFor="let message of (messageService.messageThread$|async)" >
                 <div>
                     <span class="chat-img float-right">
                         <img class="rounded-circle" src="{{message.senderPhotoUrl || './assets/user.png'}}"
@@ -14,11 +14,11 @@
                         <div class="header">
                             <small class="text-muted">
                                 <span class="fa fa-clock-o">{{message.messageSent | timeago}}</span>
-                                <span class="text-danger" *ngIf="!message.dateread && message.senderUsername !== username">
+                                <span class="text-danger" *ngIf="!message.dateRead && message.senderUsername !== username">
                                     (unread)
                                 </span>
-                                <span class="text-success" *ngIf="message.dateread && message.senderUsername !== username">
-                                    (read {{message.dateread | timeago}})
+                                <span class="text-success" *ngIf="message.dateRead && message.senderUsername !== username">
+                                    (read {{message.dateRead | timeago}})
                                 </span>
                             </small>
                         </div>
@@ -29,18 +29,21 @@
 
         </ul>
     </div>
+
     <div class="card-footer">
         <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
             <div class="input-group">
                 <input 
-                        name="messageContent"
-                        required
-                        [(ngModel)]="messageContenet"
-                        type="text" 
-                        class="form-control input-sm" 
-                        placeholder="Send Private Message">
+                    name="messageContent"
+                    required
+                    [(ngModel)]="messageContent"
+                    type="text" 
+                    class="form-control input-sm" 
+                    placeholder="Send a private message">
                 <div class="input-group-append">
-                    <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">send</button>
+                    <button [disabled]="!messageForm.valid || loading " class="btn btn-primary" type="submit">Send
+                        <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
+                    </button>
                 </div>
             </div>
         </form>
