--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -25,7 +25,7 @@
           <img src="{{User.photoUrl||'./assets/user.png'}}" alt="{{User.userName}}">
           <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{User.userName | uppercase }} </a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
-            <a routerLink='/members/edit' class="dropdown-item">Edit Profile</a>
+            <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item"(click)="logout()">Logout</a>
           </div>
