--- a/client/src/app/member/member-edit/member-edit.component.html
+++ b/client/src/app/member/member-edit/member-edit.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.isKnownAs}}" 
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" 
                 class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
@@ -26,7 +26,7 @@
                 </div>
                 <div>
                     <strong>Member since:</strong>
-                    <p>{{member.created | date:'dd MMM yyyy'}}</p>
+                    <p>{{member.created | date: 'dd MMM yyyy'}}</p>
                 </div>
             </div>
             <div class="card-footer">
@@ -37,14 +37,14 @@
 
     <div class="col-8">
         <tabset class="member-tabset">
-            <tab heading='About {{member.isKnownAs}}'>
+            <tab heading='About {{member.knownAs}}'>
                 <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
-                    <h4 class="mt-2">Description</h4>
-                    <textarea class="form-control" [(ngModel)]="member.interduction" name="interduction" rows="6"></textarea>
+                    <h4>Description</h4>
+                    <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
                     <h4 class="mt-2">Looking for</h4>
                     <textarea class="form-control" [(ngModel)]="member.lookingFor" name="lookingFor" rows="6"></textarea>
                     <h4 class="mt-2">Interests</h4>
-                    <textarea class="form-control" [(ngModel)]="member.intests" name="intests" rows="6"></textarea>
+                    <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
                     <h4 class="mt-2">Location Details: </h4>
                     <div class="form-inline">
                         <label for="city">City: </label>
@@ -56,7 +56,7 @@
                
             </tab>
             <tab heading='Edit Photos'>
-            <app-photo-editor [member]="member"></app-photo-editor>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
